--- a/za.co.sagoclubs.CaptureResults/AndroidManifest.xml
+++ b/za.co.sagoclubs.CaptureResults/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="za.co.sagoclubs"
     android:versionCode="1"
-    android:versionName="1.6" >
+    android:versionName="2.0" >
 
     <uses-sdk android:minSdkVersion="8" />
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -13,7 +13,7 @@
         android:theme="@android:style/Theme.NoTitleBar">
         <activity
             android:name=".MainActivity"
-            android:label="@string/screen_title" >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -21,63 +21,70 @@
         </activity>
         <activity
             android:name=".SelectWhitePlayerActivity"
-            android:label="@string/screen_title" >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.EDIT" />
             </intent-filter>
         </activity>
         <activity
             android:name=".SelectBlackPlayerActivity"
-            android:label="@string/screen_title" >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.EDIT" />
             </intent-filter>
         </activity>
         <activity
             android:name=".SelectPlayerActivity"
-            android:label="@string/screen_title" >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.EDIT" />
             </intent-filter>
         </activity>
         <activity
             android:name=".LogFileActivity"
-            android:label="@string/screen_title" >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.EDIT" />
             </intent-filter>
         </activity>
         <activity
             android:name=".CaptureDetailActivity"
-            android:label="@string/screen_title" >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.EDIT" />
             </intent-filter>
         </activity>
         <activity
             android:name=".SettingsActivity"
-            android:label="@string/screen_title" >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.EDIT" />
             </intent-filter>
         </activity>
         <activity
             android:name="SelectFavouritePlayersActivity"
-            android:label="@string/screen_title" >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.EDIT" />
             </intent-filter>
         </activity>
         <activity
             android:name=".ResultConfirmActivity"
-            android:label="@string/screen_title" >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.EDIT" />
             </intent-filter>
         </activity>
         <activity
             android:name=".UndoActivity"
-            android:label="@string/screen_title" >
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.EDIT" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".PlayerRatingsActivity"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.EDIT" />
             </intent-filter>
