--- a/za.co.sagoclubs.CaptureResults/AndroidManifest.xml
+++ b/za.co.sagoclubs.CaptureResults/AndroidManifest.xml
@@ -70,14 +70,18 @@
         </activity>
         <activity
             android:name=".ResultConfirmActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:windowSoftInputMode="stateHidden"
+             >
             <intent-filter>
                 <action android:name="android.intent.action.EDIT" />
             </intent-filter>
         </activity>
         <activity
             android:name=".UndoActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:windowSoftInputMode="stateHidden"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.EDIT" />
             </intent-filter>
